--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CarServiceProjectDbContextConnectionPostgres" : "Server=127.0.0.1;Port=5432;Database=PieShopDB;Username=postgres;Password=changeme;"
+  }
 }
