transfer form Postgres to SqlLite added

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CarServiceProjectDbContextConnectionPostgres" : "Server=localhost;Port=5432;Database=CarServiceDB;Username=postgres;Password=changeme;"
+    "CarServiceProjectDbContextConnectionPostgres" : "Data Source=CarServiceDb.db"
   }
 }
