--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CarServiceProjectDbContextConnectionPostgres" : "Server=162.105.246.4;Port=5432;Database=CarServiceDB;Username=postgres;Password=changeme;"
+    "CarServiceProjectDbContextConnectionPostgres" : "Server=localhost;Port=5432;Database=CarServiceDB;Username=postgres;Password=changeme;"
   }
 }
